tests/ui/traits/issue-71036.stderr
error[E0277]: the trait `DispatchFromDyn<&&U>` is not implemented for `&&T`
  --> $DIR/issue-71036.rs:11:1
   |
LL | impl<'a, T: ?Sized + Unsize<U>, U: ?Sized> DispatchFromDyn<Foo<'a, U>> for Foo<'a, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DispatchFromDyn<&&U>` is not implemented for `&&T`, which is required by `&'a &'a T: DispatchFromDyn<&'a &'a U>`
   |
   = help: the following other types implement trait `DispatchFromDyn<T>`:
             <&'a T as DispatchFromDyn<&'a U>>
             <&'a mut T as DispatchFromDyn<&'a mut U>>
   = note: required for `&'a &'a T` to implement `DispatchFromDyn<&'a &'a U>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
